@@ -1,5 +1,6 @@
 DIST guitarix2-0.27.1.tar.bz2 20608874 SHA256 9bfb26bd6615aaece69755c2a7082a4eb6ff86d503f3dbcc8ddbebc0be579139 SHA512 50f3fd14a1b5574c78d9e9e1c28a69510bd58bc701cdf2bfdfc51baa8cff450802bce4b0410140bac71fcacdb68ad04cb771a2f10bf679448bf4db1faf07c61b WHIRLPOOL 48533c76d94ad4e691f1d7b2cf2f663534ba3d93fdb662c60b663956c016e872f1c158ee3d5cb718b2045fe8fb30610578ad05ff29fc37d34fd6cd4e2018610c
+EBUILD guitarix2-0.27.1-r1.ebuild 2707 SHA256 230539de4ba351b7a69a53565a07a8a4c3a2e94e8e96fea87127509d0390396f SHA512 a7f52b8aab7f14655a995427115252a9939d3cfcba3e1e3df68765267b90dd7875ecea0a275df73cec82cfd778ddf7e7dabb554b809ce603386e32324c15d0cb WHIRLPOOL 5740ff8fda6a57842a1038bc3e18e64eabca4731c1fe2027993a24bffd0bcfe3eb32cc5f3015d0b5f09da4db9fe86060f4781768a57d27c88f497708034bf82e
 EBUILD guitarix2-0.27.1.ebuild 2666 SHA256 4ca693c0d893be2b29e6de6369dda78a7c05dc97aea828cb0a9951dbfd7220be SHA512 3355f72d61dcc23d3032197d3a732836d6f5643a59cd43d962de85f5b3ad8b618e3fcbb2f6acf6355878e907c309c54dbe37e47a00aa2d7590b5bfa224806182 WHIRLPOOL dff6cfa7c4c19eca764c9c24c2391305c22cd86a58a69ad410ef34bebffd522c23b20f180fffa98744e0e100eb6ab9db908d840836dbf0581bb5cb0a0df461bd
-EBUILD guitarix2-9999.ebuild 2660 SHA256 c2c26c44237f06b17fdb5f5a198ed7cb12262b2469025ab86b2f4c5658dd67db SHA512 640eaa0033ba146e5d8e9edfe6a2703d51a22c9d00a54f2d643c0c9135bb5a15cd31183c58bfe0437bcb6e54aa537b126692392006b448f63cfad03edd131bdc WHIRLPOOL 7ec41817c29e9d0a71bb4abcee350781c742934c558a674d36baa59bc66cf43190b4d78f1fd3b547c85572cf739027edf4677a0136f8a6557bfb1076c211bb1d
-MISC ChangeLog 3778 SHA256 a92195cb8cc58672945d55db6f6e221b67d2cfebfb5ffbe2c2811e21092c1db2 SHA512 86a7ef4fbbab9812303e96d48aedfa01a0c3fba2acdfae795fefef84bd2b06a481464893ac94ce499f36692a0251189dd13a9c81ff663152de38561165dd9c82 WHIRLPOOL c83fca57a1bd323794da3e06d2af431ce3eb51928c4ce4761bb382b1fff7170704f8aef31735eb153998ed79924bab3581d69eccc3fbb5a505f5833274399c4a
+EBUILD guitarix2-9999.ebuild 2779 SHA256 4d6982f75535fe91d284c77990a080088984646de74786f3a10cbc5ed8c1b256 SHA512 3ef1037ad7b2739d0fdafef3acc260fbb8a576377f9046167e6367f231dff70bd6c529c67d1b9e315326372c28a7700b0e783a564291cb7cb7b2368429d548b0 WHIRLPOOL dd5615530b1b91a035e663ba2aa181502230c43ed46c601bc5191bafa581dfea50af50d0375e3abb2d5cc98a514506f896f24f23a11b1e09c54a66108a0a691b
+MISC ChangeLog 4084 SHA256 d67c6424ae26c781e39bf8eb8d8fc542df82b0b4e5de6ea5067ff5ac3594e8a3 SHA512 2f7b368f40a9981436a9c270b4486f7fc01e5ceb53e48c13cf1ba99e7a2ed81172f0e72e037e86e619231c6557149704b0ff5212ea0e3119cbf5d8566010ad3c WHIRLPOOL 9e58d09b1fbbcb8a241c80205417e9af1abdc781a624759b9370ad482030ac0962640c060a0ce01a8c8b79ac3cb67a1b2eaf22b56abbf1889e1d1285a923cd0c
 MISC metadata.xml 642 SHA256 fef3af7ca682c1fc74f610c6afbdb908af976102a852d8bbea3616c361f2cf1d SHA512 783c6b25b865825ce1ded5d93202f5b0470da1255c33540f52e9b82d4c7d0f3eb76f643d5f06a35682ba7cd3f5dd6eb07798d8a3a247d9cc57cdc6acc9b96739 WHIRLPOOL c83234ce05b42242d307decb6dcb866ea5b02294b5da3e4901b3da47adc210f7dc50c8100d846b9b5c8a89fcaacec4f598a765f3f952fc433818d37c9beb7e1c
